[Server} - implement security handler
