# server/app/services/userService.js
@@ -1,16 +1,25 @@
-const Users = require('../models').User;
+const User = require('../models').User;
 
 /**
  * Service for fetch all user information
  */
 class UserService {
   /**
+   * Get a user given its id
+   * @param {Number} id
+   * @returns User
+   */
+  static async getUser(id) {
+    return User.findOne({ where: { id } });
+  }
+
+  /**
    * Get a user given its email
    * @param {String} email
    * @returns User
    */
-  static async getUser(email) {
-    return Users.findOne({ where: { email } });
+  static async getUserByEmail(email) {
+    return User.findOne({ where: { email } });
   }
 
   /**
@@ -19,7 +28,11 @@ class UserService {
    * @returns User's created
    */
   static async registerUser(user) {
-    return Users.create(user);
+    return User.create(user);
+  }
+
+  static async putUser(id, data) {
+    return User.update(data, { where: id });
   }
 }
 
